--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Untitled</title>
+	<title>ToyBox Media</title>
 	<!--
 	<base href="http://www.domain.com/" />
 	-->
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css"> 
 	<!-- set baseline grid -->
-	<link rel="stylesheet" href="http://basehold.it/24">
+	<!--<link rel="stylesheet" href="http://basehold.it/24">-->
 	
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
